--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Welcome</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>A creative man is motivated by the desire to achieve, not by the desire to beat others - <small>Ayn Rand</small></p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
