--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About Me</h2>
                     <hr class="light">
+                    <img src="http://ultimate-true-american.herokuapp.com/assets/Yahya-e245ecc3d00f1275ad3d3fd1c7334227f01d9743169e2e081b8fa1ff7eb592a8.jpg" class="img-rounded img-responsive devpic center-block" alt="Image" />
                     <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
