--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h2 class="section-heading">About Me</h2>
                     <hr class="light">
                     <img class="img-responsive devPic img-circle center-block" src="http://ultimate-true-american.herokuapp.com/assets/Yahya-e245ecc3d00f1275ad3d3fd1c7334227f01d9743169e2e081b8fa1ff7eb592a8.jpg">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">Hi, I'm Yahya Hussein! I reside in the beautiful city of Seattle, WA. Aspiring Rubyist and life long learner. I embarked on my coding journey about a year ago and have been in love with it ever since. Coding has allowed me to take my ideas to a whole new level, not to mention the great people who share my interests I've met along the way. Critical thinking and knowing how to be resourceful in finding the answers to my questions have also been the highlights of my learning. Below I have added the languages I am most profecient in and have used in my projects thus far. I will certainly be adding to this list as I continue to develop my passion and skills for programming.</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
