updated button info

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h1 id="homeHeading">Welcome</h1>
                 <hr>
                 <p>A creative man is motivated by the desire to achieve, not by the desire to beat others - <small>Ayn Rand</small></p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">About Me</a>
             </div>
         </div>
     </header>
@@ -84,7 +84,7 @@
                     <hr class="light">
                     <img class="img-responsive devPic img-circle center-block" src="http://ultimate-true-american.herokuapp.com/assets/Yahya-e245ecc3d00f1275ad3d3fd1c7334227f01d9743169e2e081b8fa1ff7eb592a8.jpg">
                     <p class="text-faded">Hi, I'm Yahya Hussein! I reside in the beautiful city of Seattle, WA. Aspiring Rubyist and life long learner. I embarked on my coding journey about a year ago and have been in love with it ever since. Coding has allowed me to take my ideas to a whole new level, not to mention the great people who share my interests I've met along the way. Critical thinking and knowing how to be resourceful in finding the answers to my questions have also been the highlights of my learning. Below I have added the languages I am most profecient in and have used in my projects thus far. I will certainly be adding to this list as I continue to develop my passion and skills for programming.</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">View More!</a>
                 </div>
             </div>
         </div>
