started updating techs used

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <hr class="light">
                     <img class="img-responsive devPic img-circle center-block" src="http://ultimate-true-american.herokuapp.com/assets/Yahya-e245ecc3d00f1275ad3d3fd1c7334227f01d9743169e2e081b8fa1ff7eb592a8.jpg">
                     <p class="text-faded">Hi, I'm Yahya Hussein! I reside in the beautiful city of Seattle, WA. Aspiring Rubyist and life long learner. I embarked on my coding journey about a year ago and have been in love with it ever since. Coding has allowed me to take my ideas to a whole new level, not to mention the great people who share my interests I've met along the way. Critical thinking and knowing how to be resourceful in finding the answers to my questions have also been the highlights of my learning. Below I have added the languages I am most profecient in and have used in my projects thus far. I will certainly be adding to this list as I continue to develop my passion and skills for programming.</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">View More!</a>
+                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Learn More!</a>
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">Technologies</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -103,9 +103,9 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <i class="fa fa-4x fa-html5 wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <h3>HTML5 | CSS</h3>
+                        <p class="text-muted">Using HTML5/CSS3 has really helped me in developing my skills in becoming a better designer. </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
