--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <i class="fa fa-4x fa-code wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <h3>Javascript | jQuery</h3>
+                        <p class="text-muted">Javascript is everywhere we use the web. It's fun for me to use and it's flexibility allows me to run wild with my ideas with no limitations. </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
