added node to tech stack

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <i class="fa fa-4x fa-terminal wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <h3>Nodejs | Express</h3>
+                        <p class="text-muted">Being able to build web apps using a variety of different back-end languages and front-end frameworks has helped me in my pursuit of becomming an all-around developer.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
