--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
+                        <i class="fa fa-4x fa-database wow bounceIn text-primary"></i>
+                        <h3>MongoDB</h3>
                         <p class="text-muted">You have to make your websites with love these days!</p>
                     </div>
                 </div>
