--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-html5 wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>HTML5 | CSS</h3>
-                        <p class="text-muted">I enjoy using HTML5/CSS3 to build responsive and beautfiul websites </p>
+                        <p class="text-muted">I enjoy using HTML5/CSS3 to build responsive and beautfiul websites.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -126,7 +126,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-database wow bounceIn text-primary"></i>
                         <h3>MongoDB</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <p class="text-muted">Ease of scaling and no complex joins with mongo,</p>
                     </div>
                 </div>
             </div>
