--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-html5 wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <i class="fa fa-4x fa-html5 wow bounceIn text-primary"></i>
                         <h3>HTML5 | CSS</h3>
                         <p class="text-muted">I enjoy using HTML5/CSS3 to build responsive and beautfiul websites.</p>
                     </div>
@@ -117,14 +117,14 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-terminal wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <i class="fa fa-4x fa-terminal wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Nodejs | Express</h3>
                         <p class="text-muted">Being able to build web apps using a variety of different back-end languages and front-end frameworks has helped me in my pursuit of becomming an all-around developer.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-database wow bounceIn text-primary"></i>
+                        <i class="fa fa-4x fa-database wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>MongoDB</h3>
                         <p class="text-muted">Ease of scaling and no complex joins with mongo,</p>
                     </div>
