--- a/index.html
+++ b/index.html
@@ -103,28 +103,28 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-html5 wow bounceIn text-primary"></i>
+                        <i class="fa fa-4x fa-html5 text-primary sr-icons"></i>
                         <h3>HTML5 | CSS</h3>
                         <p class="text-muted">I enjoy using HTML5/CSS3 to build responsive and beautfiul websites.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-code wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <i class="fa fa-4x fa-code text-primary sr-icons"></i>
                         <h3>Javascript | jQuery</h3>
                         <p class="text-muted">Javascript is everywhere we use the web. It's fun for me to use and it's flexibility allows me to run wild with my ideas with no limitations. </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-terminal wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <i class="fa fa-4x fa-terminal text-primary sr-icons"></i>
                         <h3>Nodejs | Express</h3>
                         <p class="text-muted">Being able to build web apps using a variety of different back-end languages and front-end frameworks has helped me in my pursuit of becomming an all-around developer.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-database wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <i class="fa fa-4x fa-database text-primary sr-icons"></i>
                         <h3>MongoDB</h3>
                         <p class="text-muted">Ease of scaling and no complex joins with mongo,</p>
                     </div>
