--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-github fa-3x sr-contact"></i>
-                    <p><a href="github.com/yahya09206">github</a></p>
+                    <p><a href="https://github.com/yahya09206">github</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
