--- a/index.html
+++ b/index.html
@@ -247,11 +247,15 @@
                     <hr class="primary">
                     <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <div class="col-md-4 text-center">
                     <i class="fa fa-github fa-3x sr-contact"></i>
                     <p><a href="https://github.com/yahya09206">github</a></p>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-md-4 text-center">
+                    <i class="fa fa-github fa-3x sr-contact"></i>
+                    <p><a href="https://github.com/yahya09206">github</a></p>
+                </div>
+                <div class="col-md-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:your-email@your-domain.com">yahyahussein91@gmail.com</a></p>
                 </div>
