--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
                     <p><a href="https://github.com/yahya09206">github</a></p>
                 </div>
                 <div class="col-md-4 text-center">
-                    <i class="fa fa-github fa-3x sr-contact"></i>
-                    <p><a href="https://github.com/yahya09206">github</a></p>
+                    <i class="fa fa-linkedin fa-3x sr-contact"></i>
+                    <p><a href="www.linkedin.com/in/yahyahussein91">LinkedIn</a></p>
                 </div>
                 <div class="col-md-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
