updated email icon

--- a/index.html
+++ b/index.html
@@ -249,15 +249,15 @@
                 </div>
                 <div class="col-md-4 text-center">
                     <i class="fa fa-github fa-3x sr-contact"></i>
-                    <p><a href="https://github.com/yahya09206">github</a></p>
+                    <p><a href="https://github.com/yahya09206">Github</a></p>
                 </div>
                 <div class="col-md-4 text-center">
                     <i class="fa fa-linkedin fa-3x sr-contact"></i>
-                    <p><a href="www.linkedin.com/in/yahyahussein91">LinkedIn</a></p>
+                    <p><a href="https://www.linkedin.com/in/yahyahussein91">LinkedIn</a></p>
                 </div>
                 <div class="col-md-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">yahyahussein91@gmail.com</a></p>
+                    <p><a href="mailto:yahyahussein91@gmail.com">E-mail</a></p>
                 </div>
             </div>
         </div>
