changed inverse of icons

--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
                     <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
                 </div>
                 <div class="col-md-4 text-center">
-                    <i class="fa fa-github fa-3x sr-contact"></i>
+                    <i class="fa fa-github-o fa-3x sr-contact"></i>
                     <p><a href="https://github.com/yahya09206">Github</a></p>
                 </div>
                 <div class="col-md-4 text-center">
-                    <i class="fa fa-linkedin fa-3x sr-contact"></i>
+                    <i class="fa fa-linkedin-o fa-3x sr-contact"></i>
                     <p><a href="https://www.linkedin.com/in/yahyahussein91">LinkedIn</a></p>
                 </div>
                 <div class="col-md-4 text-center">
