--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-database text-primary sr-icons"></i>
                         <h3>MongoDB</h3>
-                        <p class="text-muted">Ease of scaling and no complex joins with mongo.</p>
+                        <p class="text-muted">I like its ease of scaling and no complex joins with mongo.</p>
                     </div>
                 </div>
             </div>
