--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Color Picker
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Made with html and css
                                 </div>
                             </div>
                         </div>
