--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                     Color Picker
                                 </div>
                                 <div class="project-name">
-                                    Made with html and css
+                                    Made with HTML and CSS
                                 </div>
                             </div>
                         </div>
