updated description for color game

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                     Color Picker
                                 </div>
                                 <div class="project-name">
-                                    Made with HTML and CSS
+                                    Made with HTML and CSS. A frontend game that requires the user to guess what rgb color is being displayed based on the numbers given.
                                 </div>
                             </div>
                         </div>
