--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
+            <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://yahya09206.github.io/colorPicker/" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
