--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    To-Do List
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Front-end todo list made with html,css and jquery. Allows user to add,delete and toggle the list. Has Transitions made with css as well.
                                 </div>
                             </div>
                         </div>
