--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Photo Grid
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Simple photo grid made purely with html and css. It is responsive so I got some practice doing that.
                                 </div>
                             </div>
                         </div>
