--- a/index.html
+++ b/index.html
@@ -182,15 +182,15 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
+                    <a href="http://www.deendb.com/users/sign_in" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    DeenDb
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    A fullstack app made with ruby on rails. Allows users create local events in their community. They can also checkout other events and notify the other user if they will be attending.
                                 </div>
                             </div>
                         </div>
