added lake tahoe

--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Lake Tahoe
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    A fully responsive website made with html and css. Brochure for Lake Tahoe in California.
                                 </div>
                             </div>
                         </div>
