--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Ultimate True American
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    A reference guide for the game played from the tv show New Girl. full stack app made with ruby on rails.
                                 </div>
                             </div>
                         </div>
