update node info

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-terminal text-primary sr-icons"></i>
                         <h3>Nodejs | Express</h3>
-                        <p class="text-muted">Being able to build web apps using a variety of different back-end languages and front-end frameworks has helped me in my pursuit of becomming an all-around developer.</p>
+                        <p class="text-muted">Being able to build web apps using a variety of different back-end technologies and front-end frameworks has helped me in my pursuit of becomming an all-around developer.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
