trying to fix layout

--- a/index.html
+++ b/index.html
@@ -241,6 +241,21 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://yahya09206.github.io/diceGame/" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/8.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Cuunto(Food in Somali)
+                                </div>
+                                <div class="project-name">
+                                    A website for a fictional resturaunt. Made from scratch using html and css and special fonts and icons.
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
