replaced todo list with dice game

--- a/index.html
+++ b/index.html
@@ -152,15 +152,15 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://yahya09206.github.io/jQueryTodo/" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                    <a href="https://yahya09206.github.io/diceGame/" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/8.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    To-Do List
+                                    Roll It!
                                 </div>
                                 <div class="project-name">
-                                    Front-end todo list made with html,css and jquery. Allows user to add,delete and toggle the list. Has Transitions made with css as well.
+                                    Two player front-end dice game. Made with html,css and javascript.
                                 </div>
                             </div>
                         </div>
