finally fixed layout issue with grid

--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@
                         </div>
                     </a>
                 </div>
+            </div>
+            <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://www.deendb.com/users/sign_in" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
@@ -226,6 +228,8 @@
                         </div>
                     </a>
                 </div>
+            </div>
+            <div class="row no-gutter">  
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://yahya09206.github.io/cuunto/" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/7.jpg" class="img-responsive" alt="">
