--- a/index.html
+++ b/index.html
@@ -245,6 +245,21 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://yahya09206.github.io/jQueryTodo/" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Todo List
+                                </div>
+                                <div class="project-name">
+                                    A front-end to do app made with html,css & jquery.
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
