--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://yahya09206.github.io/colorPicker/" class="portfolio-box">
+                    <a href="https://yahya09206.github.io/colorPicker/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
