--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://yahya09206.github.io/diceGame/" class="portfolio-box">
+                    <a href="https://yahya09206.github.io/diceGame/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/8.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -167,7 +167,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://yahya09206.github.io/photoGrid/" class="portfolio-box">
+                    <a href="https://yahya09206.github.io/photoGrid/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -184,7 +184,7 @@
             </div>
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://www.deendb.com/users/sign_in" class="portfolio-box">
+                    <a href="http://www.deendb.com/users/sign_in" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -199,7 +199,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://yahya09206.github.io/laketahoe/" class="portfolio-box">
+                    <a href="http://yahya09206.github.io/laketahoe/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -214,7 +214,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://ultimate-true-american.herokuapp.com/" class="portfolio-box">
+                    <a href="http://ultimate-true-american.herokuapp.com/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -231,7 +231,7 @@
             </div>
             <div class="row no-gutter">  
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://yahya09206.github.io/cuunto/" class="portfolio-box">
+                    <a href="https://yahya09206.github.io/cuunto/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/7.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -246,7 +246,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://yahya09206.github.io/jQueryTodo/" class="portfolio-box">
+                    <a href="https://yahya09206.github.io/jQueryTodo/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
